correcting dataset benchmarking

--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -187,10 +187,7 @@
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..');from thesis_package import utils\n",
-    "import numpy as np\n",
-    "def compute_threshold(df):\n",
-    "    X_train, X_test, y_train, y_test = utils.split_and_suffle(pd.DataFrame(np.ones((df.shape[0],10))), df)\n",
-    "    return y_test.loc[:, y_test.max(axis=0) != 0].max(axis=0).mean() * 0.10"
+    "import numpy as np"
    ]
   },
   {
@@ -210,7 +207,7 @@
     }
    ],
    "source": [
-    "compute_threshold(res_bus_vm_pu_max_constr)"
+    "utils.compute_threshold(res_bus_vm_pu_max_constr)"
    ]
   },
   {
@@ -225,16 +222,46 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turned res_bus_vm_pu_max_sparse_bool_constr into boolean data set with threshold  0.0015910583688507286\n",
+      "Turned res_bus_vm_pu_min_sparse_bool_constr into boolean data set with threshold  0.002024237856061223\n",
+      "Turned res_line_i_ka_max_sparse_bool_constr into boolean data set with threshold  0.0025\n",
+      "Turned res_line_percent_sparse_bool_constr into boolean data set with threshold  0.0025\n"
+     ]
+    }
+   ],
    "source": [
     "# Take a df and turn turn a cell to 1 when it is grater than 0, otherwise 0.\n",
     "def turn_boolean(df, threshold):\n",
     "    df = df.apply(lambda x: x.apply(lambda y: 1 if y > threshold else 0))\n",
     "    return df\n",
-    "res_bus_vm_pu_min_sparse_bool_constr = turn_boolean(res_bus_vm_pu_min_constr, compute_threshold(res_bus_vm_pu_min_constr))\n",
-    "res_bus_vm_pu_max_sparse_bool_constr = turn_boolean(res_bus_vm_pu_max_constr, compute_threshold(res_bus_vm_pu_max_constr))\n",
-    "res_line_i_ka_max_sparse_bool_constr = turn_boolean(res_line_i_ka_max_constr, compute_threshold(res_line_i_ka_max_constr))\n",
-    "res_line_percent_sparse_bool_constr = turn_boolean(res_line_percent_constr, compute_threshold(res_line_percent_constr))"
+    "res_bus_vm_pu_max_sparse_bool_constr = turn_boolean(res_bus_vm_pu_max_constr, utils.compute_threshold(res_bus_vm_pu_max_constr))\n",
+    "res_bus_vm_pu_min_sparse_bool_constr = turn_boolean(res_bus_vm_pu_min_constr, utils.compute_threshold(res_bus_vm_pu_min_constr))\n",
+    "res_line_i_ka_max_sparse_bool_constr = turn_boolean(res_line_i_ka_max_constr, utils.compute_threshold(res_line_i_ka_max_constr))\n",
+    "res_line_percent_sparse_bool_constr = turn_boolean(res_line_percent_constr, utils.compute_threshold(res_line_percent_constr))\n",
+    "\n",
+    "print('Turned res_bus_vm_pu_max_sparse_bool_constr into boolean data set with threshold ', utils.compute_threshold(res_bus_vm_pu_max_constr))\n",
+    "print('Turned res_bus_vm_pu_min_sparse_bool_constr into boolean data set with threshold ', utils.compute_threshold(res_bus_vm_pu_min_constr))\n",
+    "print('Turned res_line_i_ka_max_sparse_bool_constr into boolean data set with threshold ', utils.compute_threshold(res_line_i_ka_max_constr))\n",
+    "print('Turned res_line_percent_sparse_bool_constr into boolean data set with threshold ', utils.compute_threshold(res_line_percent_constr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check results"
    ]
   },
   {
@@ -246,23 +273,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22236\n"
+      "22236\n",
+      "22236\n",
+      "Threshold:  0.0015910583688507286\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "22236"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(res_bus_vm_pu_max_constr[res_bus_vm_pu_max_constr > compute_threshold(res_bus_vm_pu_max_constr)].count().sum())\n",
-    "res_bus_vm_pu_max_sparse_bool_constr.sum().sum()"
+    "print(res_bus_vm_pu_max_constr[res_bus_vm_pu_max_constr > utils.compute_threshold(res_bus_vm_pu_max_constr)].count().sum())\n",
+    "print(res_bus_vm_pu_max_sparse_bool_constr.sum().sum())\n",
+    "print('Threshold: ', utils.compute_threshold(res_bus_vm_pu_max_constr))"
    ]
   },
   {
@@ -289,7 +309,7 @@
     }
    ],
    "source": [
-    "print(res_bus_vm_pu_min_constr[res_bus_vm_pu_min_constr > compute_threshold(res_bus_vm_pu_min_constr)].count().sum())\n",
+    "print(res_bus_vm_pu_min_constr[res_bus_vm_pu_min_constr > utils.compute_threshold(res_bus_vm_pu_min_constr)].count().sum())\n",
     "res_bus_vm_pu_min_sparse_bool_constr.sum().sum()"
    ]
   },
@@ -309,9 +329,9 @@
     }
    ],
    "source": [
-    "print(res_bus_vm_pu_max_constr[res_bus_vm_pu_max_constr < compute_threshold(res_bus_vm_pu_max_constr)].count().sum())\n",
+    "print(res_bus_vm_pu_max_constr[res_bus_vm_pu_max_constr < utils.compute_threshold(res_bus_vm_pu_max_constr)].count().sum())\n",
     "print(res_bus_vm_pu_max_sparse_bool_constr.shape[0]*res_bus_vm_pu_max_sparse_bool_constr.shape[1] - res_bus_vm_pu_max_sparse_bool_constr.sum().sum())\n",
-    "print(compute_threshold(res_bus_vm_pu_max_constr))"
+    "print(utils.compute_threshold(res_bus_vm_pu_max_constr))"
    ]
   },
   {
@@ -339,9 +359,9 @@
     }
    ],
    "source": [
-    "print(res_bus_vm_pu_min_constr[res_bus_vm_pu_min_constr < compute_threshold(res_bus_vm_pu_min_constr)].count().sum())\n",
+    "print(res_bus_vm_pu_min_constr[res_bus_vm_pu_min_constr < utils.compute_threshold(res_bus_vm_pu_min_constr)].count().sum())\n",
     "print(res_bus_vm_pu_min_sparse_bool_constr.shape[0]*res_bus_vm_pu_min_sparse_bool_constr.shape[1] - res_bus_vm_pu_min_sparse_bool_constr.sum().sum())\n",
-    "compute_threshold(res_bus_vm_pu_min_constr)"
+    "utils.compute_threshold(res_bus_vm_pu_min_constr)"
    ]
   },
   {
@@ -355,13 +375,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Check Filtered Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from copy import deepcopy\n",
+    "# Classification data\n",
+    "y_max_u_bool = deepcopy(res_bus_vm_pu_max_sparse_bool_constr)\n",
+    "y_min_u_bool = deepcopy(res_bus_vm_pu_min_sparse_bool_constr)\n",
+    "y_max_u_bool = y_max_u_bool[utils.cols_with_positive_values(y_max_u_bool)]\n",
+    "y_min_u_bool = y_min_u_bool[utils.cols_with_positive_values(y_min_u_bool)]\n",
+    "_exogenous_data = deepcopy(exogenous_data.drop(columns=['date']))\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(_exogenous_data, y_max_u_bool, test_size=0.2, scaling=True)\n",
+    "data_max_u_bool = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y), 'scaler': deepcopy(scaler)}\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(_exogenous_data, y_min_u_bool, test_size=0.2, scaling=True)\n",
+    "data_min_u_bool = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y), 'scaler': deepcopy(scaler)}\n",
+    "# Filtered data\n",
+    "y_max_u_sparse = deepcopy(res_bus_vm_pu_max_constr)\n",
+    "y_min_u_sparse = deepcopy(res_bus_vm_pu_min_constr)\n",
+    "y_max_u_filtered = y_max_u_sparse[utils.cols_with_positive_values(y_max_u_bool)]\n",
+    "y_min_u_filtered = y_min_u_sparse[utils.cols_with_positive_values(y_min_u_bool)]\n",
+    "\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(_exogenous_data, y_max_u_filtered, test_size=0.2, scaling=True)\n",
+    "data_max_u_filtered = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y), 'scaler': deepcopy(scaler)}\n",
+    "\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(_exogenous_data, y_min_u_filtered, test_size=0.2, scaling=True)\n",
+    "data_min_u_filtered = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y), 'scaler': deepcopy(scaler)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification data size:  (9044, 10)\n",
+      "Regression data size:  (9044, 10)\n",
+      "Positive in classification data:  5036.0\n",
+      "Positive in regression data:  5036\n",
+      "Theshhold:  0.0015910583688507286\n",
+      "bus_8 Positives(reg/class):  11 / 2.0\n",
+      "bus_9 Positives(reg/class):  292 / 217.0\n",
+      "bus_10 Positives(reg/class):  373 / 326.0\n",
+      "bus_11 Positives(reg/class):  489 / 415.0\n",
+      "bus_12 Positives(reg/class):  587 / 513.0\n",
+      "bus_13 Positives(reg/class):  712 / 654.0\n",
+      "bus_14 Positives(reg/class):  775 / 719.0\n",
+      "bus_15 Positives(reg/class):  777 / 722.0\n",
+      "bus_16 Positives(reg/class):  782 / 735.0\n",
+      "bus_18 Positives(reg/class):  781 / 733.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the size of the classiciation testing data and the filtered testing data\n",
+    "print('Classification data size: ', data_max_u_bool['y_test'].shape)\n",
+    "print('Regression data size: ', data_max_u_filtered['y_test'].shape)\n",
+    "print('Positive in classification data: ', utils.count_positives_class(data_max_u_bool['y_test']))\n",
+    "unscaled_y_test = pd.DataFrame(data_max_u_filtered['scaler']['y'].inverse_transform(data_max_u_filtered['y_test']), columns=data_max_u_filtered['y_test'].columns)\n",
+    "print('Positive in regression data: ', utils.count_positives_reg(unscaled_y_test, utils.compute_threshold(y_max_u_sparse)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create Focused Dataset\n",
     "The focused dataset consists only of the rows in which at least one target feature is non-zerio, that is, there is at least on constraint violation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,32 +492,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_19848\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_balanced_df(df, bool_df, focused_df): \n",
     "    # Returns a df with all the rows that are fully 0.\n",
@@ -450,20 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6972 / 2 = 3486 == 3486.0\n",
-      "threshold = 0.0015910583688507286\n",
-      "13918 / 2 = 6959 == 6959.0\n",
-      "threshold = 0.002024237856061223\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sanity_check(balanced_df, threshold):\n",
     "    ctr = 0\n",
@@ -473,9 +532,9 @@
     "            ctr += 1\n",
     "    print('{} / 2 = {} == {}'.format(balanced_df.shape[0], ctr, balanced_df.shape[0]/2))\n",
     "    print('threshold = {}'.format(threshold))\n",
-    "threshold = compute_threshold(res_bus_vm_pu_max_constr)\n",
+    "threshold = utils.compute_threshold(res_bus_vm_pu_max_constr)\n",
     "sanity_check(res_bus_vm_pu_max_balanced_constr, threshold)\n",
-    "threshold = compute_threshold(res_bus_vm_pu_min_constr)\n",
+    "threshold = utils.compute_threshold(res_bus_vm_pu_min_constr)\n",
     "sanity_check(res_bus_vm_pu_min_balanced_constr, threshold)"
    ]
   },
@@ -489,12 +548,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_bus_vm_pu_min_balanced_bool_constr = turn_boolean(res_bus_vm_pu_min_balanced_constr, compute_threshold(res_bus_vm_pu_min_balanced_constr))\n",
-    "res_bus_vm_pu_max_balanced_bool_constr = turn_boolean(res_bus_vm_pu_max_balanced_constr, compute_threshold(res_bus_vm_pu_max_balanced_constr))"
+    "res_bus_vm_pu_min_balanced_bool_constr = turn_boolean(res_bus_vm_pu_min_balanced_constr, utils.compute_threshold(res_bus_vm_pu_min_balanced_constr))\n",
+    "res_bus_vm_pu_max_balanced_bool_constr = turn_boolean(res_bus_vm_pu_max_balanced_constr, utils.compute_threshold(res_bus_vm_pu_max_balanced_constr))"
    ]
   },
   {
@@ -507,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +580,15 @@
     "res_bus_vm_pu_min_balanced_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_balanced_constr.csv', index=False)\n",
     "res_bus_vm_pu_min_balanced_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_balanced_bool_constr.csv', index=False)\n",
     "exogenous_data_vm_pu_min_focused.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_focused.csv', index=False)\n",
-    "exogenous_data_vm_pu_min_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_balanced.csv', index=False)\n",
+    "exogenous_data_vm_pu_min_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_balanced.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# max_vm_pu\n",
     "res_bus_vm_pu_max_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_max_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_constr.csv', index=False)\n",
@@ -531,7 +598,15 @@
     "exogenous_data_vm_pu_max_focused.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_max_focused.csv', index=False)\n",
     "res_bus_vm_pu_max_balanced_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_constr.csv', index=False)\n",
     "exogenous_data_vm_pu_max_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_max_balanced.csv', index=False)\n",
-    "res_bus_vm_pu_max_balanced_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_bool_constr.csv', index=False)\n",
+    "res_bus_vm_pu_max_balanced_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_bool_constr.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# max i_ka\n",
     "res_line_i_ka_max_constr['timestamps'] = timestamps\n",
     "res_line_i_ka_max_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_constr.csv', index=False)\n",
@@ -540,7 +615,15 @@
     "res_line_i_ka_max_focused_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_focused_constr.csv', index=False)\n",
     "exogenous_data_i_ka_max_focused.to_csv('..\\data\\ground_truth\\\\exogenous_data_i_ka_max_focused.csv', index=False)\n",
     "res_line_i_ka_max_balanced_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_balanced_constr.csv', index=False)\n",
-    "exogenous_data_i_ka_max_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_i_ka_max_balanced.csv', index=False)\n",
+    "exogenous_data_i_ka_max_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_i_ka_max_balanced.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# max line loading\n",
     "res_line_percent_constr['timestamps'] = timestamps\n",
     "res_line_percent_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_constr.csv', index=False)\n",
