correcting regression matric in dataset benchamrking

--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -420,18 +420,7 @@
       "Classification data size:  (9044, 10)\n",
       "Regression data size:  (9044, 10)\n",
       "Positive in classification data:  5036.0\n",
-      "Positive in regression data:  5036\n",
-      "Theshhold:  0.0015910583688507286\n",
-      "bus_8 Positives(reg/class):  11 / 2.0\n",
-      "bus_9 Positives(reg/class):  292 / 217.0\n",
-      "bus_10 Positives(reg/class):  373 / 326.0\n",
-      "bus_11 Positives(reg/class):  489 / 415.0\n",
-      "bus_12 Positives(reg/class):  587 / 513.0\n",
-      "bus_13 Positives(reg/class):  712 / 654.0\n",
-      "bus_14 Positives(reg/class):  775 / 719.0\n",
-      "bus_15 Positives(reg/class):  777 / 722.0\n",
-      "bus_16 Positives(reg/class):  782 / 735.0\n",
-      "bus_18 Positives(reg/class):  781 / 733.0\n"
+      "Positive in regression data:  5036\n"
      ]
     }
    ],
@@ -454,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,9 +481,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8740\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n"
+     ]
+    }
+   ],
    "source": [
     "def get_balanced_df(df, bool_df, focused_df): \n",
     "    # Returns a df with all the rows that are fully 0.\n",
@@ -520,9 +532,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6972 / 2 = 3486 == 3486.0\n",
+      "threshold = 0.0015910583688507286\n",
+      "13918 / 2 = 6959 == 6959.0\n",
+      "threshold = 0.002024237856061223\n"
+     ]
+    }
+   ],
    "source": [
     "def sanity_check(balanced_df, threshold):\n",
     "    ctr = 0\n",
@@ -548,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
