--- a/jupyter_notebooks/datasets_benchmark.ipynb
+++ b/jupyter_notebooks/datasets_benchmark.ipynb
@@ -1403,6 +1403,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment: max_u_regressor_sparse, model: lr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_sparse, model: gb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_sparse, model: xgb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_sparse, model: svr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_sparse, model: mlp, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_focused, model: lr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_focused, model: gb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_focused, model: xgb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_focused, model: svr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_focused, model: mlp, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_filtered_regressor, model: lr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_filtered_regressor, model: gb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_filtered_regressor, model: xgb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_filtered_regressor, model: svr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_filtered_regressor, model: mlp, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_balanced, model: lr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_balanced, model: gb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_balanced, model: xgb, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_balanced, model: svr, threshold: 0.001591058368850724\n",
+      "Experiment: max_u_regressor_balanced, model: mlp, threshold: 0.001591058368850724\n",
+      "Experiment: min_u_regressor_sparse, model: lr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_sparse, model: gb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_sparse, model: xgb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_sparse, model: svr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_sparse, model: mlp, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_focused, model: lr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_focused, model: gb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_focused, model: xgb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_focused, model: svr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_focused, model: mlp, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_filtered_regressor, model: lr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_filtered_regressor, model: gb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_filtered_regressor, model: xgb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_filtered_regressor, model: svr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_filtered_regressor, model: mlp, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_balanced, model: lr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_balanced, model: gb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_balanced, model: xgb, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_balanced, model: svr, threshold: 0.0020242378560612192\n",
+      "Experiment: min_u_regressor_balanced, model: mlp, threshold: 0.0020242378560612192\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
@@ -5174,12 +5228,12 @@
    "metadata": {},
    "source": [
     "## Conclusions\n",
-    "In order to understand how good our predictions really are, "
+    "In order to understand how good our predictions really are, we can compare it to a random classifier. [source](https://inside.getyourguide.com/blog/2020/9/30/what-makes-a-good-f1-score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -6280,7 +6334,7 @@
        "                          mlp       0.226129  0.066541   0.12478  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
