--- a/jupyter_notebooks/hybrid_model_ensemble_benchmark.ipynb
+++ b/jupyter_notebooks/hybrid_model_ensemble_benchmark.ipynb
@@ -17,37 +17,21 @@
    "metadata": {},
    "source": [
     "## Introduction to the model \n",
-    "The objective of the hybrid model ensemble is to combine the classification and regression models in the same prediction task. Since the objective is to forecast the occurrence and amplitude of constraint violations, the objective is to divide this task into two subtasks to be carried out by two different models. The first model is a classification model that predicts the occurrence of constraint violations. The second model is a regression model that predicts the amplitude of constraint violations. The hybrid model ensemble combines the predictions of the two models to obtain the final prediction. The models chosen are the ones that had the best performance in the dataset benchmarking. \n",
-    "\n",
-    "To test this methodology it is necessary to create a hybrid data set as well, where for each bus, there are two target features, one for the classification task and one for the regression task. The classification target is a binary variable that indicates whether the bus has a constraint violation or not. The regression target is the amplitude of the constraint violation. \n",
-    "\n",
-    "The prediction generation of the hybrid ensemble model has the following algoruthm:\n",
-    "- constr_occurrence ⟵  classification_prediction()\n",
-    "- if constr_occurrence > 1\n",
-    "    - amplitude_constr ⟵ regression_prediction()\n",
-    "- else\n",
-    "    - amplitude_constr  0\n",
-    "- target_datapoint ⟵ (constr_occurrence, amplitude_constr) "
+    "The objective of the hybrid model ensemble is to combine the classification and regression models in the same prediction task. Since the objective is to forecast the occurrence and amplitude of constraint violations, the objective is to divide this task into two subtasks to be carried out by two different models. The first model is a classification model that predicts the occurrence of constraint violations. The second model is a regression model that predicts the amplitude of constraint violations. The hybrid model ensemble combines the predictions of the two models to obtain the final prediction. The models chosen are the ones that had the best performance in the dataset benchmarking. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Hybrid Model 1\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "model_c, model_r \n",
-    "fow row in rows:\n",
-    "    if model_c(row):\n",
-    "        res = model_r(row)\n",
-    "    else:\n",
-    "        res = 0\n",
-    "    output.append(res)\n",
-    "output\n",
-    "\n",
+    "## Model 2\n",
     "train: |exogenous|real_bool| -> |constraint_amplitude|\n",
     "test: |exogenous|predict_bool| -> |predicted constraint_amplitude|"
    ]
@@ -60,7 +44,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
